--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
       <li>Les messages SMS, WhatsApp ou email</li>
     </ul>
 
-    <p class="mt-4">Pour optimiser vos balises meta et améliorer votre référencement, consultez la <a href="https://developers.google.com/search/docs/appearance/title-link" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline">documentation officielle de Google Search Central</a>. L'outil s'exécute entièrement dans votre navigateur, garantissant une expérience rapide et totalement privée. Aucune donnée n'est envoyée à un serveur distant. Il fonctionne aussi bien sur ordinateur que sur mobile ou tablette.</p>
+    <p class="mt-4">Pour optimiser vos balises meta et améliorer votre référencement, consultez la <a href="https://developers.google.com/search/docs/appearance/title-link" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline">documentation officielle de Google Search Central</a>.
+    <br>L'outil s'exécute entièrement dans votre navigateur, garantissant une expérience rapide et totalement privée. Aucune donnée n'est envoyée à un serveur distant. Il fonctionne aussi bien sur ordinateur que sur mobile ou tablette.</p>
 
     <h2 class="text-lg font-semibold mt-6">Fonctionnalités clés :</h2>
     <ul class="list-disc list-inside">
