--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
     <p class="mt-4">Parfait pour optimiser :</p>
     <ul class="list-disc list-inside">
       <li>Les meta-descriptions pour le SEO</li>
-      <li>Les titres et descriptions d'annonces pour le SEA</li>
-      <li>Les publications sur Twitter/X, LinkedIn, Instagram</li>
+      <li>Les annonces pour le SEA</li>
+      <li>Les publications sur les réseaux sociaux</li>
       <li>Les balises title de pages web</li>
       <li>Les résumés de thèse ou de dissertation</li>
       <li>Les messages SMS, WhatsApp ou email</li>
@@ -74,16 +74,16 @@
       <li>Nombre de lignes</li>
       <li>Longueur moyenne des mots</li>
       <li>Mot le plus long</li>
-      <li>Interface adaptée au thème sombre ou clair automatiquement</li>
-      <li>Bouton de suppression ou de copie du texte analysé</li>
+      <li>Interface en thème sombre ou clair</li>
+      <li>Bouton de suppression/copie du texte analysé</li>
     </ul>
 
     <h2 class="text-lg font-semibold mt-6">Pour qui ?</h2>
     <ul class="list-disc list-inside">
-      <li>📚 Étudiants & enseignants</li>
-      <li>✍️ Rédacteurs web & consultants SEO</li>
-      <li>👨‍💻 Développeurs et créateurs de contenu</li>
-      <li>📰 Journalistes ou auteurs</li>
+      <li>📚 Étudiants, enseignants</li>
+      <li>✍️ Rédacteurs web, consultants SEO</li>
+      <li>👨‍💻 Développeurs, créateurs de contenu</li>
+      <li>📰 Journalistes, auteurs</li>
       <li>📱 Professionnels des réseaux sociaux</li>
     </ul>
 
