--- a/index.html
+++ b/index.html
@@ -53,16 +53,14 @@
 
     <p class="mt-4">Parfait pour optimiser :</p>
     <ul class="list-disc list-inside">
-      <li>Les meta-descriptions pour le SEO</li>
+      <li>Les balises SEO de vos pages </li>
       <li>Les annonces pour le SEA</li>
       <li>Les publications sur les réseaux sociaux</li>
-      <li>Les balises title de pages web</li>
       <li>Les résumés de thèse ou de dissertation</li>
       <li>Les messages SMS, WhatsApp ou email</li>
     </ul>
 
-    <p class="mt-4">Pour optimiser vos balises meta et améliorer votre référencement, consultez la <a href="https://developers.google.com/search/docs/appearance/title-link" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline">documentation officielle de Google Search Central</a>.
-    <br>L'outil s'exécute entièrement dans votre navigateur, garantissant une expérience rapide et totalement privée. Aucune donnée n'est envoyée à un serveur distant. Il fonctionne aussi bien sur ordinateur que sur mobile ou tablette.
+    <p class="mt-4">L'outil s'exécute entièrement dans votre navigateur, garantissant une expérience rapide et totalement privée. Aucune donnée n'est envoyée à un serveur distant. Il fonctionne aussi bien sur ordinateur que sur mobile ou tablette.
     <br>Par ailleurs, le compteur est conçu pour s’adapter à tous les profils d’utilisateurs, du novice qui cherche à respecter une limite de caractères, au rédacteur expérimenté souhaitant affiner chaque détail de son texte. Son fonctionnement 100 % local, dans le navigateur, assure un traitement instantané, sans délai ni nécessité de connexion internet, idéal pour travailler en mobilité. 
     <br>L’intégration d’un thème clair/sombre automatique offre également un confort visuel, réduisant la fatigue lors de longues sessions d’écriture. Enfin, grâce aux fonctions de suppression et de copie rapides, vous gagnez en efficacité sans quitter l’interface, ce qui simplifie grandement le flux de travail. 
     <br>Avec cet outil, optimisez vos contenus, gagnez du temps, et assurez-vous de toujours respecter les contraintes imposées par vos supports de publication.</p>
@@ -74,7 +72,7 @@
       <li>Nombre de lignes</li>
       <li>Longueur moyenne des mots</li>
       <li>Mot le plus long</li>
-      <li>Interface en thème sombre ou clair</li>
+      <li>Interface en thème sombre ou clair (bientôt)</li>
       <li>Bouton de suppression/copie du texte analysé</li>
     </ul>
 
@@ -111,6 +109,12 @@
       <div>
         <h3 class="font-semibold">Mes textes sont-ils sauvegardés sur vos serveurs ?</h3>
         <p>Absolument pas. Votre vie privée est notre priorité absolue. L'analyse de votre texte se fait directement dans votre navigateur. Aucun texte que vous collez dans notre outil n'est envoyé, stocké ou enregistré sur nos serveurs. Tout ce que vous écrivez reste votre propriété et disparaît dès que vous quittez la page.</p>
+      </div>
+      <div>
+        <h3 class="font-semibold">Comment connaître le nombre de caractères optimal ?</h3>
+        <p>Le nombre de caractères optimal dépend du support utilisé : publicités, résultats de recherche, réseaux sociaux, ou encore emails. Pour plus de détails sur les recommandations officielles, consultez
+          <a href="https://support.google.com/google-ads/answer/1704389?hl=fr" target="_blank" rel="noopener noreferrer"> les bonnes pratiques pour les annonces Google Ads</a> ou encore
+          <a href="https://developers.google.com/search/docs/appearance/title-link?hl=fr" target="_blank" rel="noopener noreferrer"> les consignes de Google pour les titres affichés dans les résultats de recherche</a></p>
       </div>
     </div>
   </section>
