--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <h3 class="font-semibold">Comment connaître le nombre de caractères optimal ?</h3>
         <p>Le nombre de caractères optimal dépend du support utilisé : publicités, résultats de recherche, réseaux sociaux, ou encore emails. Pour plus de détails sur les recommandations officielles, consultez
           <a href="https://support.google.com/google-ads/answer/1704389?hl=fr" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline hover:text-blue-800 transition-colors"> les bonnes pratiques pour les annonces Google Ads</a> ou encore
-          <a href="https://developers.google.com/search/docs/appearance/title-link?hl=fr" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline hover:text-blue-800 transition-colors"> les consignes de Google pour les titres affichés dans les résultats de recherche</a></p>
+          <a href="https://developers.google.com/search/docs/appearance/title-link?hl=fr" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline hover:text-blue-800 transition-colors"> les consignes de Google pour les titres affichés dans les résultats de recherche</a>.</p>
       </div>
     </div>
   </section>
