--- a/politique-confidentialite.html
+++ b/politique-confidentialite.html
@@ -53,6 +53,7 @@
       <p>Pour toute demande relative à la vie privée ou à cette politique, vous pouvez nous contacter à l’adresse suivante : <em>(à compléter)</em></p>
     </section>
 
+    <p class="text-sm text-gray-500 pt-6 border-t border-gray-200">Dernière mise à jour : juillet 2025</p>
     <a href="/compteur-caracteres" class="inline-block mt-4 px-6 py-3 text-white bg-blue-600 hover:bg-blue-700 rounded-lg shadow transition">
       Compteur de caractères
     </a>
