--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -20,27 +20,27 @@
     </section>
 
     <section>
-      <h2 class="text-xl font-semibold mb-2">Contact</h2>
+      <h2 class="text-xl font-semibold mb-2">1. Contact</h2>
       <p>Pour toute question ou signalement, vous pouvez nous contacter à l’adresse suivante : <em>(à compléter si souhaité)</em></p>
     </section>
 
     <section>
-      <h2 class="text-xl font-semibold mb-2">Hébergement</h2>
+      <h2 class="text-xl font-semibold mb-2">2. Hébergement</h2>
       <p>L’hébergement de ce site est actuellement en cours de sélection. Cette page sera mise à jour dès que l’hébergeur sera désigné.</p>
     </section>
 
     <section>
-      <h2 class="text-xl font-semibold mb-2">Propriété intellectuelle</h2>
+      <h2 class="text-xl font-semibold mb-2">3. Propriété intellectuelle</h2>
       <p>Le contenu de ce site (textes, images, code, etc.) est protégé par le droit d’auteur. Toute reproduction ou utilisation sans autorisation est interdite.</p>
     </section>
 
     <section>
-      <h2 class="text-xl font-semibold mb-2">Confidentialité</h2>
+      <h2 class="text-xl font-semibold mb-2">4. Confidentialité</h2>
       <p>Ce site ne stocke aucune donnée personnelle. Aucune information n’est transmise à des tiers sans votre consentement explicite. Une page dédiée à la politique de confidentialité sera publiée en cas d’intégration de publicités ou de cookies tiers.</p>
     </section>
 
     <section>
-      <h2 class="text-xl font-semibold mb-2">Publicité</h2>
+      <h2 class="text-xl font-semibold mb-2">5. Publicité</h2>
       <p>Ce site peut contenir des publicités dans le futur afin de soutenir son développement. Les contenus sponsorisés seront clairement identifiés. Le respect de la vie privée des utilisateurs reste une priorité.</p>
     </section>
 
