--- a/politique-confidentialite.html
+++ b/politique-confidentialite.html
@@ -10,47 +10,26 @@
 <body class="bg-gray-100 text-gray-800 p-8">
   <main class="max-w-3xl mx-auto bg-white p-8 rounded-xl shadow-lg space-y-6">
     <h1 class="text-3xl font-bold mb-6">Politique de confidentialité</h1>
+      <p>Ce site ne collecte pas de données personnelles. Aucun compte n’est requis, et les textes saisis dans le compteur ne sont ni stockés ni transmis : tout se passe localement dans votre navigateur.</p>
 
     <section>
-      <h2 class="text-xl font-semibold mb-2">1. Respect de votre vie privée</h2>
-      <p>Nous attachons une grande importance à la protection de votre vie privée. Cette page décrit les données que nous collectons et comment elles sont utilisées.</p>
+      <h2 class="text-xl font-semibold mb-2">1. Cookies et publicités</h2>
+      <p>Le site affiche des publicités via <strong>Google AdSense</strong>, qui peut utiliser des cookies pour vous proposer des annonces personnalisées ou non personnalisées selon votre choix.</p>
+      <p>La gestion de votre consentement est assurée par <strong>Sirdata</strong>, une plateforme certifiée de gestion des préférences. Sirdata peut collecter certaines données techniques anonymes à des fins publicitaires (cookies, identifiants techniques, adresse IP partielle).</p>
+      <p>Vous pouvez à tout moment modifier vos choix en matière de cookies via le lien « Gérer mes cookies » disponible en bas de page.</p>
+      <p>En savoir plus sur la politique de Sirdata :  
+        <a href="https://www.sirdata.com/privacy/" target="_blank" rel="noopener">sirdata.com/privacy</a>
+    </p>
     </section>
 
     <section>
-      <h2 class="text-xl font-semibold mb-2">2. Aucune donnée personnelle collectée</h2>
-      <p>Ce site n'enregistre, ne transmet ni ne stocke aucune donnée personnelle. Tous les traitements sont effectués localement dans votre navigateur. Aucun texte saisi n’est transmis à un serveur.</p>
+      <h2 class="text-xl font-semibold mb-2">2. Respect de la vie privée</h2>
+      <p>Aucune donnée sensible ou personnelle (nom, email, etc.) n’est demandée ou conservée. Ce site est conçu pour fonctionner en mode local et ne transmet rien à un serveur tiers (hors publicités)</p>
     </section>
 
     <section>
-      <h2 class="text-xl font-semibold mb-2">3. Utilisation des cookies</h2>
-      <p>Ce site peut utiliser des cookies pour :</p>
-      <ul class="list-disc list-inside ml-4 space-y-1">
-        <li>Mémoriser votre préférence de thème (clair/sombre)</li>
-        <li>Afficher des publicités personnalisées via des partenaires (ex. Google AdSense)</li>
-      </ul>
-      <p>En poursuivant votre navigation, vous acceptez l’utilisation éventuelle de ces cookies.</p>
-    </section>
-
-    <section>
-      <h2 class="text-xl font-semibold mb-2">4. Publicité (à venir)</h2>
-      <p>Nous pourrions afficher des annonces via Google AdSense ou un autre réseau publicitaire. Ces services peuvent utiliser des cookies pour afficher des publicités personnalisées selon vos centres d'intérêt.</p>
-      <p>Vous pourrez gérer vos préférences de consentement via un bandeau dédié.</p>
-    </section>
-
-    <section>
-      <h2 class="text-xl font-semibold mb-2">5. Vos droits</h2>
-      <p>Conformément au Règlement Général sur la Protection des Données (RGPD), vous disposez des droits suivants :</p>
-      <ul class="list-disc list-inside ml-4 space-y-1">
-        <li>Droit d’accès, de rectification et d’effacement de vos données</li>
-        <li>Droit à la limitation ou à l’opposition du traitement</li>
-        <li>Droit à la portabilité de vos données</li>
-      </ul>
-      <p>Bien que ce site ne collecte pas de données personnelles, nous restons à votre disposition pour toute question ou clarification.</p>
-    </section>
-
-    <section>
-      <h2 class="text-xl font-semibold mb-2">6. Contact</h2>
-      <p>Pour toute demande relative à la vie privée ou à cette politique, vous pouvez nous contacter à l’adresse suivante : <em>(à compléter)</em></p>
+      <h2 class="text-xl font-semibold mb-2">3. Contact</h2>
+      <p>Pour toute question, contactez-nous via l’adresse disponible dans les mentions légales</p>
     </section>
 
     <p class="text-sm text-gray-500 pt-6 border-t border-gray-200">Dernière mise à jour : juillet 2025</p>
