--- a/politique-confidentialite.html
+++ b/politique-confidentialite.html
@@ -18,7 +18,7 @@
       <p>La gestion de votre consentement est assurée par <strong>Sirdata</strong>, une plateforme certifiée de gestion des préférences. Sirdata peut collecter certaines données techniques anonymes à des fins publicitaires (cookies, identifiants techniques, adresse IP partielle).</p>
       <p>Vous pouvez à tout moment modifier vos choix en matière de cookies via le lien « Gérer mes cookies » disponible en bas de page.</p>
       <p>En savoir plus sur la politique de Sirdata :  
-        <a href="https://www.sirdata.com/privacy/" target="_blank" rel="noopener">sirdata.com/privacy</a>
+        <a href="https://www.sirdata.com/privacy/" target="_blank" rel="noopener" class="text-blue-600 hover:underline hover:text-blue-800 transition-colors">sirdata.com/privacy</a>
     </p>
     </section>
 
