--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -12,38 +12,21 @@
     <h1 class="text-3xl font-bold mb-4">Mentions légales</h1>
 
     <section>
-      <h2 class="text-xl font-semibold mb-2">Éditeur du site</h2>
-      <p><strong>Nom :</strong> Eddy Abed-Royer</p>
-      <p><strong>Statut :</strong> Micro-entrepreneur (particulier)</p>
-      <p><strong>Adresse :</strong> 15, rue Charles Durand, 33300 Bordeaux, France</p>
-      <p><strong>SIRET :</strong> 843 559 204 00030</p>
-    </section>
-
-    <section>
-      <h2 class="text-xl font-semibold mb-2">1. Contact</h2>
-      <p>Pour toute question ou signalement, vous pouvez nous contacter à l’adresse suivante : <em>(à compléter si souhaité)</em></p>
+      <h2 class="text-xl font-semibold mb-2">1. Édition du site</h2>
+      <p>Ce site est édité par Eddy Abed-Royer (Micro-entrepreneur) dont le siège est situé au 15, rue Charles Durand, 33300 Bordeaux.</p>
     </section>
 
     <section>
       <h2 class="text-xl font-semibold mb-2">2. Hébergement</h2>
-      <p>L’hébergement de ce site est actuellement en cours de sélection. Cette page sera mise à jour dès que l’hébergeur sera désigné.</p>
+      <p>Le site est hébergé par o2switch (222-224 Boulevard Gustave Flaubert, 63000 Clermont-Ferrand – France)
+      <a href="https://www.o2switch.fr" target="_blank">www.o2switch.fr</a></p>
     </section>
 
     <section>
-      <h2 class="text-xl font-semibold mb-2">3. Propriété intellectuelle</h2>
-      <p>Le contenu de ce site (textes, images, code, etc.) est protégé par le droit d’auteur. Toute reproduction ou utilisation sans autorisation est interdite.</p>
+      <h2 class="text-xl font-semibold mb-2">3. Contact</h2>
+      <p>Pour toute question ou signalement, vous pouvez nous contacter à l’adresse suivante : contact@compteur-de-caracteres.fr</p>
     </section>
-
-    <section>
-      <h2 class="text-xl font-semibold mb-2">4. Confidentialité</h2>
-      <p>Ce site ne stocke aucune donnée personnelle. Aucune information n’est transmise à des tiers sans votre consentement explicite. Une page dédiée à la politique de confidentialité sera publiée en cas d’intégration de publicités ou de cookies tiers.</p>
-    </section>
-
-    <section>
-      <h2 class="text-xl font-semibold mb-2">5. Publicité</h2>
-      <p>Ce site peut contenir des publicités dans le futur afin de soutenir son développement. Les contenus sponsorisés seront clairement identifiés. Le respect de la vie privée des utilisateurs reste une priorité.</p>
-    </section>
-
+    
     <p class="text-sm text-gray-500 pt-6 border-t border-gray-200">Dernière mise à jour : juillet 2025</p>
     <a href="/compteur-caracteres" class="inline-block mt-4 px-6 py-3 text-white bg-blue-600 hover:bg-blue-700 rounded-lg shadow transition">
       Compteur de caractères
