--- a/politique-confidentialite.html
+++ b/politique-confidentialite.html
@@ -32,8 +32,8 @@
     </section>
 
     <section>
-      <h2 class="text-xl font-semibold mb-2">3. Contact</h2>
-      <p>Pour toute question, contactez-nous via l’adresse disponible dans les mentions légales</p>
+      <h2 class="text-xl font-semibold mb-2">3. Propriété intellectuelle</h2>
+      <p>Le contenu de ce site (textes, images, code, etc.) est protégé par le droit d’auteur. Toute reproduction ou utilisation sans autorisation est interdite.</p>
     </section>
 
     <p class="text-sm text-gray-500 pt-6 border-t border-gray-200">Dernière mise à jour : juillet 2025</p>
