--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -18,8 +18,7 @@
 
     <section>
       <h2 class="text-xl font-semibold mb-2">2. Hébergement</h2>
-      <p>Le site est hébergé par o2switch (222-224 Boulevard Gustave Flaubert, 63000 Clermont-Ferrand – France)
-      <a href="https://www.o2switch.fr" target="_blank">www.o2switch.fr</a></p>
+      <p>Le site est hébergé par o2switch (222-224 Boulevard Gustave Flaubert, 63000 Clermont-Ferrand – France)</p>
     </section>
 
     <section>
