--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -12,7 +12,7 @@
     <h1 class="text-3xl font-bold mb-4">Mentions légales</h1>
 
     <section>
-      <h2 class="text-xl font-semibold mb-2">1. Édition du sitez</h2>
+      <h2 class="text-xl font-semibold mb-2">1. Édition du site</h2>
       <p>Ce site est édité par Eddy Abed-Royer (Micro-entrepreneur) dont le siège est situé au 15, rue Charles Durand, 33300 Bordeaux.</p>
     </section>
 
