--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -18,7 +18,7 @@
 
     <section>
       <h2 class="text-xl font-semibold mb-2">2. Hébergement</h2>
-      <p>Le site est hébergé par o2switch (222-224 Boulevard Gustave Flaubert, 63000 Clermont-Ferrand – France)</p>
+      <p>Le site est hébergé par o2switch (222-224 Boulevard Gustave Flaubert, 63000 Clermont-Ferrand – France).</p>
     </section>
 
     <section>
