--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="robots" content="noindex, nofollow">
   <title>Mentions légales - Compteur de caractères</title>
-  <meta name="description" content="Mentions légales du site Compteur de caractères - Informations sur l'éditeur, l'hébergement et la responsabilité du site." />
+  <meta name="description" content="Mentions légales du site Compteur de caractères - Informations sur l'éditeur, l'hébergement et la responsabilité du site.">
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100 text-gray-800 p-8">
