--- a/politique-confidentialite.html
+++ b/politique-confidentialite.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="robots" content="noindex, nofollow">
   <title>Politique de confidentialité - Compteur de caractères</title>
-  <meta name="description" content="Politique de confidentialité du site Compteur de caractères. Informations sur la gestion des données personnelles et des cookies." />
+  <meta name="description" content="Politique de confidentialité du site Compteur de caractères. Informations sur la gestion des données personnelles et des cookies.">
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100 text-gray-800 p-8">
