--- a/politique-confidentialite.html
+++ b/politique-confidentialite.html
@@ -47,8 +47,8 @@
     <div class="flex flex-col items-center gap-2">
       <p>Outil créé avec ❤️</p>
       <div class="flex gap-4">
-        <a href="mentions-legales" class="hover:underline">Mentions légales</a>
-        <a href="politique-confidentialite" class="hover:underline">Politique de confidentialité</a>
+        <a href="mentions-legales" rel="nofollow" class="hover:underline">Mentions légales</a>
+        <a href="politique-confidentialite" rel="nofollow" class="hover:underline">Politique de confidentialité</a>
       </div>
     </div>
   </footer>
