--- a/index.html
+++ b/index.html
@@ -165,13 +165,9 @@
       window.getSelection().removeAllRanges();
     }
       
-      /*window.onbeforeunload = function () {
+      window.onbeforeunload = function () {
         window.scrollTo(0, 0);
-      }*/
-
-    window.addEventListener('load', () => {
-      window.scrollTo(0, 0);
-    });
+      }
   </script>
   
 </body>
