--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
           </svg>
         </button>
 
+        <button onclick="copyToClipboard()" title="Copier le texte" type="button" class="absolute bottom-4 right-2 text-gray-700 bg-gray-100 hover:bg-gray-200 rounded-full p-2 shadow-sm transition">
+          <span class="sr-only">Copier le texte</span>
+          <svg viewBox="0 0 20 20" fill="currentColor" aria-hidden="true" class="w-5 h-5">
+            <path d="M6.28 5.22a.75.75 0 0 0-1.06 1.06L8.94 10l-3.72 3.72a.75.75 0 1 0 1.06 1.06L10 11.06l3.72 3.72a.75.75 0 1 0 1.06-1.06L11.06 10l3.72-3.72a.75.75 0 0 0-1.06-1.06L10 8.94 6.28 5.22Z" />
+          </svg>
+        </button>
+
+        <!--
       <button onclick="copyToClipboard()" title="Copier le texte" type="button" class="absolute bottom-4 right-3 text-sm text-gray-700 bg-gray-100 hover:bg-gray-200 rounded-lg px-2 py-1 shadow-sm transition">
         <span class="inline-flex items-center">
           <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 18 20">
@@ -31,6 +39,7 @@
         <span class="text-xs font-semibold"></span>
         </span>
       </button>
+        -->
 
       </div>
 
