--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <button onclick="copyToClipboard()" title="Copier le texte" type="button" class="absolute bottom-4 right-2 text-gray-700 bg-gray-100 hover:bg-gray-200 rounded-full p-2 shadow-sm transition">
           <span class="sr-only">Copier le texte</span>
           <svg viewBox="0 0 20 20" fill="currentColor" aria-hidden="true" class="w-5 h-5">
-            <path d="M6.28 5.22a.75.75 0 0 0-1.06 1.06L8.94 10l-3.72 3.72a.75.75 0 1 0 1.06 1.06L10 11.06l3.72 3.72a.75.75 0 1 0 1.06-1.06L11.06 10l3.72-3.72a.75.75 0 0 0-1.06-1.06L10 8.94 6.28 5.22Z" />
+          <path d="M16 1h-3.278A1.992 1.992 0 0 0 11 0H7a1.993 1.993 0 0 0-1.722 1H2a2 2 0 0 0-2 2v15a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V3a2 2 0 0 0-2-2Zm-3 14H5a1 1 0 0 1 0-2h8a1 1 0 0 1 0 2Zm0-4H5a1 1 0 0 1 0-2h8a1 1 0 1 1 0 2Zm0-5H5a1 1 0 0 1 0-2h2V2h4v2h2a1 1 0 1 1 0 2Z"/>
           </svg>
         </button>
 
