--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <button onclick="copyToClipboard()" title="Copier le texte" type="button" class="absolute bottom-4 right-2 text-gray-700 bg-gray-100 hover:bg-gray-200 rounded-full p-2 shadow-sm transition">
           <span class="sr-only">Copier le texte</span>
-          <svg viewBox="0 0 20 20" fill="currentColor" aria-hidden="true" class="w-3 h-3">
+          <svg viewBox="0 0 20 20" fill="currentColor" fill-rule="evenodd" aria-hidden="true" class="w-3 h-3">
           <path d="M4 2a2 2 0 00-2 2v9a2 2 0 002 2h2v2a2 2 0 002 2h9a2 2 0 002-2V8a2 2 0 00-2-2h-2V4a2 2 0 00-2-2H4zm9 4V4H4v9h2V8a2 2 0 012-2h5zM8 8h9v9H8V8z"/>
           </svg>
         </button>
