--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -24,7 +24,7 @@
 
     <section>
       <h2 class="text-xl font-semibold mb-2">3. Contact</h2>
-      <p>Pour toute question ou signalement, vous pouvez nous contacter à l’adresse suivante : contact@compteur-de-caracteres.fr</p>
+      <p>Pour toute question ou signalement, vous pouvez nous contacter à l’adresse suivante : contact@compteur-de-caractere.fr</p>
     </section>
     
     <p class="text-sm text-gray-500 pt-6 border-t border-gray-200">Dernière mise à jour : juillet 2025</p>
@@ -37,8 +37,8 @@
     <div class="flex flex-col items-center gap-2">
       <p>Outil créé avec ❤️</p>
       <div class="flex gap-4">
-        <a href="mentions-legales" rel="nofollow" class="hover:underline">Mentions légales</a>
-        <a href="politique-confidentialite" rel="nofollow" class="hover:underline">Politique de confidentialité</a>
+        <a href="mentions-legales.html" rel="nofollow" class="hover:underline">Mentions légales</a>
+        <a href="politique-confidentialite.html" rel="nofollow" class="hover:underline">Politique de confidentialité</a>
       </div>
     </div>
   </footer>
