--- a/politique-confidentialite.html
+++ b/politique-confidentialite.html
@@ -38,7 +38,7 @@
     </section>
 
     <p class="text-sm text-gray-500 pt-6 border-t border-gray-200">Dernière mise à jour : juillet 2025</p>
-    <a href="/compteur-caracteres" class="inline-block mt-4 px-6 py-3 text-white bg-blue-600 hover:bg-blue-700 rounded-lg shadow transition">
+    <a href="/" class="inline-block mt-4 px-6 py-3 text-white bg-blue-600 hover:bg-blue-700 rounded-lg shadow transition">
       Compteur de caractères
     </a>
   </main>
@@ -47,8 +47,8 @@
     <div class="flex flex-col items-center gap-2">
       <p>Outil créé avec ❤️</p>
       <div class="flex gap-4">
-        <a href="mentions-legales" rel="nofollow" class="hover:underline">Mentions légales</a>
-        <a href="politique-confidentialite" rel="nofollow" class="hover:underline">Politique de confidentialité</a>
+        <a href="mentions-legales.html" rel="nofollow" class="hover:underline">Mentions légales</a>
+        <a href="politique-confidentialite.html" rel="nofollow" class="hover:underline">Politique de confidentialité</a>
       </div>
     </div>
   </footer>
