--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Compteur de caractères en ligne - Caractères, mots, lignes</title>
-  <meta name="description" content="Comptez instantanément les caractères, mots, lignes et plus avec ce compteur de caractères. Outil gratuit, rapide et 100% privé. Idéal pour rédacteurs, étudiants, SEO.">
+  <title>Compteur de caractères en ligne - Caractères, mots, espaces</title>
+  <meta name="description" content="Comptez instantanément les caractères, mots, espaces et plus avec ce compteur de caractères. Outil gratuit, rapide et 100% privé. Idéal pour rédacteurs, étudiants, SEO.">
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100 text-gray-800 flex flex-col min-h-screen p-4">
@@ -35,7 +35,6 @@
         <p>📌 Caractères (avec espaces) : <span id="charWithSpaces">0</span></p>
         <p>📌 Caractères (sans espaces) : <span id="charWithoutSpaces">0</span></p>
         <p>📝 Nombre de mots : <span id="wordCount">0</span></p>
-        <p>📄 Nombre de lignes : <span id="lineCount">0</span></p>
         <p>📏 Longueur moyenne des mots : <span id="avgWordLength">0</span></p>
         <p>🏆 Mot le plus long : <span id="longestWord">—</span></p>
       </div>
@@ -46,7 +45,7 @@
 
   <section class="mt-12 max-w-3xl mx-auto bg-white rounded-xl p-6 shadow-md text-base leading-relaxed">
     <h2 class="text-xl font-semibold">Pourquoi utiliser ce compteur de caractères en ligne ?</h2>
-    <p class="mt-2">Ce <strong>compteur de caractères</strong> vous permet de connaître instantanément le nombre de caractères, mots, lignes, et autres statistiques utiles pour la rédaction de contenus professionnels ou académiques. Que vous soyez étudiant, rédacteur web, traducteur, développeur ou journaliste, cet outil vous fait gagner du temps en vous fournissant des données essentielles en un clin d'œil.</p>
+    <p class="mt-2">Ce <strong>compteur de caractères</strong> vous permet de connaître instantanément le nombre de caractères, mots, espaces, et autres statistiques utiles pour la rédaction de contenus professionnels ou académiques. Que vous soyez étudiant, rédacteur web, traducteur, développeur ou journaliste, cet outil vous fait gagner du temps en vous fournissant des données essentielles en un clin d'œil.</p>
 
     <p class="mt-4">Parfait pour optimiser :</p>
     <ul class="list-disc list-inside">
@@ -66,7 +65,6 @@
     <ul class="list-disc list-inside">
       <li>Calcul en temps réel du nombre de caractères (avec et sans espaces)</li>
       <li>Nombre de mots</li>
-      <li>Nombre de lignes</li>
       <li>Longueur moyenne des mots</li>
       <li>Mot le plus long</li>
       <li>Interface en thème sombre ou clair (bientôt)</li>
