--- a/politique-confidentialite.html
+++ b/politique-confidentialite.html
@@ -17,7 +17,7 @@
       <h2 class="text-xl font-semibold mb-2">1. Cookies et publicités</h2>
       <p>Le site affiche des publicités via <strong>Google AdSense</strong>, qui peut utiliser des cookies pour vous proposer des annonces personnalisées ou non personnalisées selon votre choix.</p>
       <p>En savoir plus sur la politique de Google AdSense :  
-        <a href="https://policies.google.com/privacy" target="_blank" rel="noopener" class="text-blue-600 hover:underline hover:text-blue-800 transition-colors">sirdata.com/privacy</a>
+        <a href="https://policies.google.com/privacy" target="_blank" rel="noopener" class="text-blue-600 hover:underline hover:text-blue-800 transition-colors">google.com/privacy</a>
       </p>
       <br>
       <p>La gestion de votre consentement est assurée par <strong>Sirdata</strong>, une plateforme certifiée de gestion des préférences. Sirdata peut collecter certaines données techniques anonymes à des fins publicitaires (cookies, identifiants techniques, adresse IP partielle).</p>
