--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="google-adsense-account" content="ca-pub-2203551797585460">
   <title>Compteur de caractères en ligne - Caractères, mots, espaces</title>
   <meta name="description" content="Comptez instantanément les caractères, mots, espaces et plus avec ce compteur de caractères. Outil gratuit, rapide et 100% privé. Idéal pour rédacteurs, étudiants, SEO.">
   <script src="https://cdn.tailwindcss.com"></script>
