--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="google-adsense-account" content="ca-pub-2203551797585460">
   <title>Compteur de caractères en ligne - Caractères, mots, espaces</title>
   <meta name="description" content="Comptez instantanément les caractères, mots, espaces et plus avec ce compteur de caractères. Outil gratuit, rapide et 100% privé. Idéal pour rédacteurs, étudiants, SEO.">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100 text-gray-800 flex flex-col min-h-screen p-4">
