--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="description" content="Comptez instantanément les caractères, mots, espaces et plus avec ce compteur de caractères. Outil gratuit, rapide et 100% privé. Idéal pour rédacteurs, étudiants, SEO.">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <script src="https://cdn.tailwindcss.com"></script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2203551797585460" crossorigin="anonymous"></script>
 </head>
 <body class="bg-gray-100 text-gray-800 flex flex-col min-h-screen p-4">
   <div class="h-screen max-w-3xl w-full mx-auto flex-grow flex flex-col justify-center">
@@ -164,7 +165,7 @@
       
       window.onbeforeunload = function () {
         window.scrollTo(0, 0);
-      }
+      }    
   </script>
   
 </body>
