--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
     <div class="flex flex-col items-center gap-2">
       <p>Outil créé avec ❤️</p>
       <div class="flex gap-4">
-        <a href="mentions-legales.html" rel="nofollow" class="hover:underline">Mentions légales</a>
-        <a href="politique-confidentialite.html" rel="nofollow" class="hover:underline">Politique de confidentialité</a>
+        <a href="mentions-legales" rel="nofollow" class="hover:underline">Mentions légales</a>
+        <a href="politique-confidentialite" rel="nofollow" class="hover:underline">Politique de confidentialité</a>
       </div>
     </div>
   </footer>
