--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </div>
 
       <div class="relative">
-        <textarea id="inputText" placeholder="Tapez ou collez votre texte ici..." oninput="updateCount()" maxlength="33000" class="w-full h-40 p-4 pr-10 border rounded-xl resize-none focus:outline-none focus:ring-2 focus:ring-blue-500"></textarea>
+        <textarea id="inputText" spellcheck="true" placeholder="Tapez ou collez votre texte ici..." oninput="updateCount()" maxlength="33000" class="w-full h-40 p-4 pr-10 border rounded-xl resize-none focus:outline-none focus:ring-2 focus:ring-blue-500"></textarea>
         <button onclick="clearTextarea()" title="Effacer le texte" type="button" class="absolute top-2 right-2 text-gray-400 hover:text-gray-700 hover:bg-gray-100 rounded-full p-2 transition">
           <span class="sr-only">Effacer le texte</span>
           <svg viewBox="0 0 20 20" fill="currentColor" aria-hidden="true" class="w-5 h-5">
