--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -14,7 +14,7 @@
 
     <section>
       <h2 class="text-xl font-semibold mb-2">1. Édition du site</h2>
-      <p>Ce site est édité par Eddy Abed-Royer (Micro-entrepreneur) dont le siège est situé au 15, rue Charles Durand, 33300 Bordeaux.</p>
+      <p>Ce site est édité par Eddy Abed-Royer (entrepreneur individuel) dont le siège est situé au 15, rue Charles Durand, 33300 Bordeaux.</p>
     </section>
 
     <section>
