--- a/guide-limite-2025.html
+++ b/guide-limite-2025.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
-<html lang="fr" class="scroll-smooth">
+<html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="google-adsense-account" content="ca-pub-2203551797585460">
   <title>Toutes les limites de caractères en 2025 – Guide complet</title>
   <meta name="description" content="Découvrez toutes les limites de caractères à respecter en 2025 sur Twitter, Instagram, SEO, YouTube et plus. Guide complet avec conseils et checklist PDF." />
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
   <script src="https://cdn.tailwindcss.com"></script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2203551797585460" crossorigin="anonymous"></script>
 </head>
-<body class="bg-gray-50 text-gray-900 font-sans max-w-4xl mx-auto px-6 py-10">
+<body class="bg-gray-100 text-gray-800 flex flex-col min-h-screen p-4">
+  <section class="mt-12 max-w-3xl mx-auto bg-white rounded-xl p-6 shadow-md text-base leading-relaxed">
 
   <h1 class="text-4xl font-bold text-blue-600 mb-6">Toutes les limites de caractères en 2025 (Twitter, TikTok, meta descriptions…)</h1>
-
   <p class="mb-6 leading-relaxed">
     Connaître les limites de caractères est devenu essentiel pour réussir sa communication sur les réseaux sociaux et optimiser son SEO. Que ce soit pour un tweet, une description YouTube ou une meta description Google, respecter ces contraintes maximise votre visibilité, votre engagement et votre référencement.
   </p>
-
   <p class="mb-10 leading-relaxed">
     Pour vous aider à compter rapidement et précisément, n’hésitez pas à tester notre outil gratuit et sans publicité : 
     <a href="https://compteur-de-caractere.fr" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline font-semibold">compteur-de-caractere.fr</a>.
   </p>
-
-  <h2 class="text-2xl font-semibold text-blue-600 mb-4">Limites de caractères sur les réseaux sociaux majeurs</h2>
-
+  <h2 class="text-xl font-semibold">Limites de caractères sur les réseaux sociaux majeurs</h2>
   <div class="overflow-x-auto">
     <table class="min-w-full border border-gray-300 bg-white rounded-lg shadow-sm">
       <thead class="bg-blue-100">
@@ -73,7 +73,7 @@
     </table>
   </div>
 
-  <h2 class="text-2xl font-semibold text-blue-600 mt-12 mb-4">Limites SEO techniques</h2>
+  <h2 class="text-xl font-semibold">Limites SEO techniques</h2>
   <ul class="list-disc list-inside space-y-2 text-gray-700 mb-10">
     <li><strong>Meta title</strong> : 50–60 caractères (Google tronque au-delà)</li>
     <li><strong>Meta description</strong> : 150–160 caractères recommandés</li>
@@ -82,7 +82,7 @@
     <li><strong>Snippet Google</strong> : la longueur influence le taux de clic (CTR)</li>
   </ul>
 
-  <h2 class="text-2xl font-semibold text-blue-600 mb-4">Limites dans d’autres contextes populaires</h2>
+  <h2 class="text-xl font-semibold">Limites dans d’autres contextes populaires</h2>
   <ul class="list-disc list-inside space-y-2 text-gray-700 mb-10">
     <li><strong>Google Ads</strong> : titres et descriptions avec contraintes strictes</li>
     <li><strong>Amazon</strong> : titres produits, descriptions, bullet points</li>
@@ -90,7 +90,7 @@
     <li><strong>SMS & WhatsApp</strong> : 160 caractères standard, multi-part messages</li>
   </ul>
 
-  <h2 class="text-2xl font-semibold text-blue-600 mb-4">Conseils pratiques pour bien gérer la longueur</h2>
+  <h2 class="text-xl font-semibold">Conseils pratiques pour bien gérer la longueur</h2>
   <p class="mb-4 leading-relaxed">
     Pour compter vos caractères en un instant, utilisez 
     <a href="https://compteur-de-caractere.fr" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline font-semibold">notre outil gratuit en ligne</a>. Il vous aidera à respecter précisément les limites, sans aucune pub ni inscription.
@@ -108,13 +108,13 @@
     <a href="https://www.grammarly.com/" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline font-semibold">Grammarly</a> pour corriger la grammaire.
   </p>
 
-  <h2 class="text-2xl font-semibold text-blue-600 mb-4">Téléchargez la checklist PDF gratuite</h2>
+  <h2 class="text-xl font-semibold">Téléchargez la checklist PDF gratuite</h2>
   <p class="mb-6 leading-relaxed">Pour garder sous la main les limites clés de chaque plateforme, téléchargez notre checklist synthétique et pratique :</p>
   <a href="/checklist-limites-caracteres-2025.pdf" target="_blank" rel="noopener noreferrer" class="inline-block bg-blue-600 text-white px-6 py-3 rounded-lg font-semibold hover:bg-blue-700 transition">
     Télécharger la checklist PDF
   </a>
 
-  <h2 class="text-2xl font-semibold text-blue-600 mt-16 mb-6">Conclusion</h2>
+  <h2 class="text-xl font-semibold">Conclusion</h2>
   <p class="mb-8 leading-relaxed">
     Maîtriser les limites de caractères est indispensable pour une communication efficace et visible sur le web en 2025. En combinant connaissance et outils pratiques comme 
     <a href="https://compteur-de-caractere.fr" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline font-semibold">notre compteur de caractères</a>, vous mettez toutes les chances de votre côté.
@@ -122,6 +122,8 @@
   <p class="mb-10 leading-relaxed">
     Partagez ce guide avec vos collègues, amis ou clients pour les aider à mieux écrire en ligne !
   </p>
+  </section>
+
 
     <footer class="mt-16 text-sm text-center text-gray-500 py-8 border-t border-gray-200">
     <div class="flex flex-col items-center gap-2">
