--- a/guide-limite-2025.html
+++ b/guide-limite-2025.html
@@ -13,7 +13,7 @@
 <body class="bg-gray-100 text-gray-800 flex flex-col min-h-screen p-4">
   <section class="mt-12 max-w-3xl mx-auto bg-white rounded-xl p-6 shadow-md text-base leading-relaxed">
 
-  <h1 class="text-4xl font-bold text-blue-600 mb-6">Toutes les limites de caractères en 2025 (Twitter, TikTok, meta descriptions…)</h1>
+  <h1 class="text-2xl font-bold">Toutes les limites de caractères en 2025 (Twitter, TikTok, meta descriptions…)</h1>
   <p class="mb-6 leading-relaxed">
     Connaître les limites de caractères est devenu essentiel pour réussir sa communication sur les réseaux sociaux et optimiser son SEO. Que ce soit pour un tweet, une description YouTube ou une meta description Google, respecter ces contraintes maximise votre visibilité, votre engagement et votre référencement.
   </p>
