--- a/guide-limite-2025.html
+++ b/guide-limite-2025.html
@@ -21,7 +21,7 @@
     Pour vous aider à compter rapidement et précisément, n’hésitez pas à tester notre outil gratuit et sans publicité : 
     <a href="https://compteur-de-caractere.fr" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline font-semibold">compteur-de-caractere.fr</a>.
   </p>
-  <h2 class="text-xl font-semibold">Limites de caractères sur les réseaux sociaux majeurs</h2>
+  <h2 class="text-lg font-semibold mt-6">Limites de caractères sur les réseaux sociaux majeurs</h2>
   <div class="overflow-x-auto">
     <table class="min-w-full border border-gray-300 bg-white rounded-lg shadow-sm">
       <thead class="bg-blue-100">
@@ -73,7 +73,7 @@
     </table>
   </div>
 
-  <h2 class="text-xl font-semibold">Limites SEO techniques</h2>
+  <h2 class="text-lg font-semibold mt-6">Limites SEO techniques</h2>
   <ul class="list-disc list-inside space-y-2 text-gray-700 mb-10">
     <li><strong>Meta title</strong> : 50–60 caractères (Google tronque au-delà)</li>
     <li><strong>Meta description</strong> : 150–160 caractères recommandés</li>
@@ -82,7 +82,7 @@
     <li><strong>Snippet Google</strong> : la longueur influence le taux de clic (CTR)</li>
   </ul>
 
-  <h2 class="text-xl font-semibold">Limites dans d’autres contextes populaires</h2>
+  <h2 class="text-lg font-semibold mt-6">Limites dans d’autres contextes populaires</h2>
   <ul class="list-disc list-inside space-y-2 text-gray-700 mb-10">
     <li><strong>Google Ads</strong> : titres et descriptions avec contraintes strictes</li>
     <li><strong>Amazon</strong> : titres produits, descriptions, bullet points</li>
@@ -90,40 +90,36 @@
     <li><strong>SMS & WhatsApp</strong> : 160 caractères standard, multi-part messages</li>
   </ul>
 
-  <h2 class="text-xl font-semibold">Conseils pratiques pour bien gérer la longueur</h2>
-  <p class="mb-4 leading-relaxed">
+  <h2 class="text-lg font-semibold mt-6">Conseils pratiques pour bien gérer la longueur</h2>
+  <p class="mt-2 leading-relaxed">
     Pour compter vos caractères en un instant, utilisez 
     <a href="https://compteur-de-caractere.fr" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline font-semibold">notre outil gratuit en ligne</a>. Il vous aidera à respecter précisément les limites, sans aucune pub ni inscription.
   </p>
-  <p class="mb-4 leading-relaxed">Voici quelques astuces pour condenser un message sans perdre son sens :</p>
+  <p class="mt-2 leading-relaxed">Voici quelques astuces pour condenser un message sans perdre son sens :</p>
   <ul class="list-disc list-inside space-y-2 text-gray-700 mb-10">
     <li>Supprimez les mots inutiles ou redondants</li>
     <li>Utilisez des synonymes plus courts</li>
     <li>Préférez la voix active aux phrases longues</li>
     <li>Évitez les répétitions</li>
   </ul>
-  <p class="mb-6 leading-relaxed">
+  <p class="mt-2 leading-relaxed">
     Complétez avec des outils comme 
     <a href="https://hemingwayapp.com/" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline font-semibold">Hemingway</a> pour améliorer la clarté ou 
     <a href="https://www.grammarly.com/" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline font-semibold">Grammarly</a> pour corriger la grammaire.
   </p>
 
-  <h2 class="text-xl font-semibold">Téléchargez la checklist PDF gratuite</h2>
-  <p class="mb-6 leading-relaxed">Pour garder sous la main les limites clés de chaque plateforme, téléchargez notre checklist synthétique et pratique :</p>
+  <h2 class="text-lg font-semibold mt-6">Téléchargez la checklist PDF gratuite</h2>
+  <p class="mt-2 leading-relaxed">Pour garder sous la main les limites clés de chaque plateforme, téléchargez notre checklist synthétique et pratique :</p>
   <a href="/checklist-limites-caracteres-2025.pdf" target="_blank" rel="noopener noreferrer" class="inline-block bg-blue-600 text-white px-6 py-3 rounded-lg font-semibold hover:bg-blue-700 transition">
     Télécharger la checklist PDF
   </a>
 
-  <h2 class="text-xl font-semibold">Conclusion</h2>
-  <p class="mb-8 leading-relaxed">
+  <h2 class="text-lg font-semibold mt-6">Conclusion</h2>
+  <p class="mt-2 leading-relaxed">
     Maîtriser les limites de caractères est indispensable pour une communication efficace et visible sur le web en 2025. En combinant connaissance et outils pratiques comme 
     <a href="https://compteur-de-caractere.fr" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline font-semibold">notre compteur de caractères</a>, vous mettez toutes les chances de votre côté.
   </p>
-  <p class="mb-10 leading-relaxed">
-    Partagez ce guide avec vos collègues, amis ou clients pour les aider à mieux écrire en ligne !
-  </p>
   </section>
-
 
     <footer class="mt-16 text-sm text-center text-gray-500 py-8 border-t border-gray-200">
     <div class="flex flex-col items-center gap-2">
