--- a/guide-limite-2025.html
+++ b/guide-limite-2025.html
@@ -74,7 +74,7 @@
   </div>
 
   <h2 class="text-lg font-semibold mt-6">Limites SEO techniques</h2>
-  <ul class="list-disc list-inside space-y-2 text-gray-700 mb-10">
+  <ul class="list-disc list-inside">
     <li><strong>Meta title</strong> : 50–60 caractères (Google tronque au-delà)</li>
     <li><strong>Meta description</strong> : 150–160 caractères recommandés</li>
     <li><strong>URL slug</strong> : longueur optimale autour de 50–60 caractères</li>
@@ -83,7 +83,7 @@
   </ul>
 
   <h2 class="text-lg font-semibold mt-6">Limites dans d’autres contextes populaires</h2>
-  <ul class="list-disc list-inside space-y-2 text-gray-700 mb-10">
+  <ul class="list-disc list-inside">
     <li><strong>Google Ads</strong> : titres et descriptions avec contraintes strictes</li>
     <li><strong>Amazon</strong> : titres produits, descriptions, bullet points</li>
     <li><strong>Email marketing</strong> : objet (50 caractères max conseillé), preview text</li>
@@ -96,7 +96,7 @@
     <a href="https://compteur-de-caractere.fr" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline font-semibold">notre outil gratuit en ligne</a>. Il vous aidera à respecter précisément les limites, sans aucune pub ni inscription.
   </p>
   <p class="mt-2 leading-relaxed">Voici quelques astuces pour condenser un message sans perdre son sens :</p>
-  <ul class="list-disc list-inside space-y-2 text-gray-700 mb-10">
+  <ul class="list-disc list-inside">
     <li>Supprimez les mots inutiles ou redondants</li>
     <li>Utilisez des synonymes plus courts</li>
     <li>Préférez la voix active aux phrases longues</li>
