--- a/guide-limite-2025.html
+++ b/guide-limite-2025.html
@@ -22,7 +22,7 @@
     <a href="https://compteur-de-caractere.fr" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline font-semibold">compteur-de-caractere.fr</a>.
   </p>
   <h2 class="text-lg font-semibold mt-6">Limites de caractères sur les réseaux sociaux majeurs</h2>
-  <div class="overflow-x-auto">
+  <div class="overflow-x-auto mt-6">
     <table class="min-w-full border border-gray-300 bg-white rounded-lg shadow-sm">
       <thead class="bg-blue-100">
         <tr>
@@ -91,7 +91,7 @@
   </ul>
 
   <h2 class="text-lg font-semibold mt-6">Conseils pratiques pour bien gérer la longueur</h2>
-  <p class="mt-2 leading-relaxed">
+  <p>
     Pour compter vos caractères en un instant, utilisez 
     <a href="https://compteur-de-caractere.fr" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline font-semibold">notre outil gratuit en ligne</a>. Il vous aidera à respecter précisément les limites, sans aucune pub ni inscription.
   </p>
@@ -109,7 +109,7 @@
   </p>
 
   <h2 class="text-lg font-semibold mt-6">Téléchargez la checklist PDF gratuite</h2>
-  <p class="mt-2 leading-relaxed">Pour garder sous la main les limites clés de chaque plateforme, téléchargez notre checklist synthétique et pratique :</p>
+  <p>Pour garder sous la main les limites clés de chaque plateforme, téléchargez notre checklist synthétique et pratique :</p>
   <a href="/checklist-limites-caracteres-2025.pdf" target="_blank" rel="noopener noreferrer" class="inline-block bg-blue-600 text-white px-6 py-3 rounded-lg font-semibold hover:bg-blue-700 transition">
     Télécharger la checklist PDF
   </a>
