--- a/guide-limite-2025.html
+++ b/guide-limite-2025.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="google-adsense-account" content="ca-pub-2203551797585460">
-  <title>Toutes les limites de caractères en 2025 – Guide complet</title>
+  <title>Guides complet des limites de caractères en 2025</title>
   <meta name="description" content="Découvrez toutes les limites de caractères à respecter en 2025 sur Twitter, Instagram, SEO, YouTube et plus. Guide complet avec conseils et checklist PDF." />
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <script src="https://cdn.tailwindcss.com"></script>
@@ -14,10 +14,10 @@
   <section class="mt-12 max-w-3xl mx-auto bg-white rounded-xl p-6 shadow-md text-base leading-relaxed">
 
   <h1 class="text-2xl font-bold">Toutes les limites de caractères en 2025 (Twitter, TikTok, meta descriptions…)</h1>
-  <p class="mb-6 leading-relaxed">
+  <p class="mt-6 leading-relaxed">
     Connaître les limites de caractères est devenu essentiel pour réussir sa communication sur les réseaux sociaux et optimiser son SEO. Que ce soit pour un tweet, une description YouTube ou une meta description Google, respecter ces contraintes maximise votre visibilité, votre engagement et votre référencement.
   </p>
-  <p class="mb-10 leading-relaxed">
+  <p class="mt-6 leading-relaxed">
     Pour vous aider à compter rapidement et précisément, n’hésitez pas à tester notre outil gratuit et sans publicité : 
     <a href="https://compteur-de-caractere.fr" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline font-semibold">compteur-de-caractere.fr</a>.
   </p>
