--- a/guide-limite-2025.html
+++ b/guide-limite-2025.html
@@ -110,7 +110,7 @@
 
   <h2 class="text-lg font-semibold mt-6">Téléchargez la checklist PDF gratuite</h2>
   <p>Pour garder sous la main les limites clés de chaque plateforme, téléchargez notre checklist synthétique et pratique :</p>
-  <a href="/checklist-limites-caracteres-2025.pdf" target="_blank" rel="noopener noreferrer" class="inline-block bg-blue-600 text-white px-6 py-3 rounded-lg font-semibold hover:bg-blue-700 transition">
+  <a href="/checklist-limites-caracteres-2025.pdf" target="_blank" rel="noopener noreferrer" class="mt-4 inline-block bg-blue-600 text-white px-6 py-3 rounded-lg font-semibold hover:bg-blue-700 transition">
     Télécharger la checklist PDF
   </a>
 
