--- a/guide-limite-2025.html
+++ b/guide-limite-2025.html
@@ -14,15 +14,15 @@
   <section class="mt-12 max-w-3xl mx-auto bg-white rounded-xl p-6 shadow-md text-base leading-relaxed">
 
   <h1 class="text-2xl font-bold">Guide complet des limites de caractères en 2025 (Meta, Google Ads, meta descriptions…)</h1>
-  <p class="mt-6 leading-relaxed">
+  <p class="mt-2 leading-relaxed">
     Connaître les limites de caractères est devenu essentiel pour réussir sa communication sur les réseaux sociaux et optimiser son SEO. Que ce soit pour un tweet, une description YouTube ou une meta description Google, respecter ces contraintes maximise votre visibilité, votre engagement et votre référencement.
   </p>
-  <p class="mt-6 leading-relaxed">
+  <p class="mt-4 leading-relaxed">
     Pour vous aider à compter rapidement et précisément, n’hésitez pas à tester notre outil gratuit et sans publicité : 
     <a href="https://compteur-de-caractere.fr" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline font-semibold">compteur-de-caractere.fr</a>.
   </p>
   <h2 class="text-lg font-semibold mt-6">Limites de caractères sur les réseaux sociaux majeurs</h2>
-  <div class="overflow-x-auto mt-6">
+  <div class="overflow-x-auto mt-2">
     <table class="min-w-full border border-gray-300 bg-white rounded-lg shadow-sm">
       <thead class="bg-blue-100">
         <tr>
@@ -73,7 +73,7 @@
     </table>
   </div>
 
-  <h2 class="text-lg font-semibold mt-6">Limites SEO techniques</h2>
+  <h2 class="text-lg font-semibold mt-6">Limites SEO techniques :</h2>
   <ul class="list-disc list-inside">
     <li><strong>Meta title</strong> : 50–60 caractères (Google tronque au-delà)</li>
     <li><strong>Meta description</strong> : 150–160 caractères recommandés</li>
@@ -82,7 +82,7 @@
     <li><strong>Snippet Google</strong> : la longueur influence le taux de clic (CTR)</li>
   </ul>
 
-  <h2 class="text-lg font-semibold mt-6">Limites dans d’autres contextes populaires</h2>
+  <h2 class="text-lg font-semibold mt-6">Limites dans d’autres contextes populaires :</h2>
   <ul class="list-disc list-inside">
     <li><strong>Google Ads</strong> : titres et descriptions avec contraintes strictes</li>
     <li><strong>Amazon</strong> : titres produits, descriptions, bullet points</li>
@@ -115,7 +115,7 @@
   </a>
 
   <h2 class="text-lg font-semibold mt-6">Conclusion</h2>
-  <p class="mt-2 leading-relaxed">
+  <p class="leading-relaxed">
     Maîtriser les limites de caractères est indispensable pour une communication efficace et visible sur le web en 2025. En combinant connaissance et outils pratiques comme 
     <a href="https://compteur-de-caractere.fr" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline font-semibold">notre compteur de caractères</a>, vous mettez toutes les chances de votre côté.
   </p>
