--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
       <li>Les messages SMS, WhatsApp ou email</li>
     </ul>
 
-    <p class="mt-4">L'outil s'exécute entièrement dans votre navigateur, garantissant une expérience rapide et totalement privée. Aucune donnée n'est envoyée à un serveur distant. Il fonctionne aussi bien sur ordinateur que sur mobile ou tablette.
-    <br>Par ailleurs, le compteur est conçu pour s’adapter à tous les profils d’utilisateurs, du novice qui cherche à respecter une limite de caractères, au rédacteur expérimenté souhaitant affiner chaque détail de son texte. Son fonctionnement 100 % local, dans le navigateur, assure un traitement instantané, sans délai ni nécessité de connexion internet, idéal pour travailler en mobilité. 
-    <br>L’intégration d’un thème clair/sombre automatique offre également un confort visuel, réduisant la fatigue lors de longues sessions d’écriture. Enfin, grâce aux fonctions de suppression et de copie rapides, vous gagnez en efficacité sans quitter l’interface, ce qui simplifie grandement le flux de travail. 
-    <br>Avec cet outil, optimisez vos contenus, gagnez du temps, et assurez-vous de toujours respecter les contraintes imposées par vos supports de publication.</p>
+    <p class="mt-4">L'outil s'exécute entièrement dans votre navigateur, garantissant une expérience rapide et totalement privée. Aucune donnée n'est envoyée à un serveur distant. Il fonctionne aussi bien sur ordinateur que sur mobile ou tablette.</p>
+    <p class="mt-2">Par ailleurs, le compteur est conçu pour s’adapter à tous les profils d’utilisateurs, du novice qui cherche à respecter une limite de caractères, au rédacteur expérimenté souhaitant affiner chaque détail de son texte. Son fonctionnement 100 % local, dans le navigateur, assure un traitement instantané, sans délai ni nécessité de connexion internet, idéal pour travailler en mobilité.</p>
+    <p class="mt-2">L’intégration d’un thème clair/sombre automatique offre également un confort visuel, réduisant la fatigue lors de longues sessions d’écriture. Enfin, grâce aux fonctions de suppression et de copie rapides, vous gagnez en efficacité sans quitter l’interface, ce qui simplifie grandement le flux de travail.</p>
+    <p class="mt-2">Avec cet outil, optimisez vos contenus, gagnez du temps, et assurez-vous de toujours respecter les contraintes imposées par vos supports de publication.</p>
 
     <h2 class="text-lg font-semibold mt-6">Fonctionnalités clés :</h2>
     <ul class="list-disc list-inside">
