--- a/index.html
+++ b/index.html
@@ -11,6 +11,32 @@
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2203551797585460" crossorigin="anonymous"></script>
 </head>
 <body class="bg-gray-100 text-gray-800 flex flex-col min-h-screen p-4">
+  
+  <nav class="bg-white fixed w-full z-20 top-0 left-0 border-b border-gray-200">
+    <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
+      <a href="/" class="flex items-center space-x-3">
+        <img src="/logo.svg" class="h-8" alt="Logo">
+        <span class="self-center text-2xl font-semibold whitespace-nowrap">Compteur</span>
+      </a>
+      <button data-collapse-toggle="navbar-menu" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200" aria-controls="navbar-menu" aria-expanded="false">
+        <span class="sr-only">Ouvrir le menu</span>
+        <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+        </svg>
+      </button>
+      <div class="hidden w-full md:flex md:w-auto" id="navbar-menu">
+        <ul class="flex flex-col md:flex-row md:space-x-8 font-medium mt-4 md:mt-0 bg-white md:bg-transparent p-4 md:p-0 border md:border-0 rounded-lg border-gray-100">
+          <li>
+            <a href="/" class="block py-2 px-3 text-blue-700 md:p-0 font-semibold">Accueil</a>
+          </li>
+          <li>
+            <a href="/limites" class="block py-2 px-3 text-gray-700 hover:text-blue-700 md:p-0">Limites</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
   <div class="h-screen max-w-3xl w-full mx-auto flex-grow flex flex-col justify-center">
     <div class="bg-white shadow-xl rounded-2xl p-8">
       <div class="flex justify-between items-center mb-4">
