--- a/index.html
+++ b/index.html
@@ -12,30 +12,33 @@
 </head>
 <body class="bg-gray-100 text-gray-800 flex flex-col min-h-screen p-4">
   
-  <nav class="bg-white fixed w-full z-20 top-0 left-0 border-b border-gray-200">
-    <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-      <a href="/" class="flex items-center space-x-3">
-        <img src="/logo.svg" class="h-8" alt="Logo">
-        <span class="self-center text-2xl font-semibold whitespace-nowrap">Compteur</span>
-      </a>
-      <button data-collapse-toggle="navbar-menu" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200" aria-controls="navbar-menu" aria-expanded="false">
+<nav class="bg-white fixed w-full z-20 top-0 start-0 border-b border-gray-200">
+  <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
+    <a href="/" class="flex items-center space-x-3 rtl:space-x-reverse">
+      <img src="logo.jpg" class="h-8" alt="Compteur de caractère Logo">
+      <span class="self-center text-2xl font-semibold whitespace-nowrap text-gray-900">Compteur de caractère</span>
+    </a>
+    <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
+      <button type="button" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center">Compteur de caractère</button>
+      <button data-collapse-toggle="navbar-sticky" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200" aria-controls="navbar-sticky" aria-expanded="false">
         <span class="sr-only">Ouvrir le menu</span>
-        <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+        <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
+          <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
         </svg>
       </button>
-      <div class="hidden w-full md:flex md:w-auto" id="navbar-menu">
-        <ul class="flex flex-col md:flex-row md:space-x-8 font-medium mt-4 md:mt-0 bg-white md:bg-transparent p-4 md:p-0 border md:border-0 rounded-lg border-gray-100">
-          <li>
-            <a href="/" class="block py-2 px-3 text-blue-700 md:p-0 font-semibold">Accueil</a>
-          </li>
-          <li>
-            <a href="/limites" class="block py-2 px-3 text-gray-700 hover:text-blue-700 md:p-0">Limites</a>
-          </li>
-        </ul>
-      </div>
     </div>
-  </nav>
+    <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-sticky">
+      <ul class="flex flex-col p-4 md:p-0 mt-4 font-medium border border-gray-100 rounded-lg bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-white">
+        <li>
+          <a href="#" class="block py-2 px-3 text-white bg-blue-700 rounded-sm md:bg-transparent md:text-blue-700 md:p-0" aria-current="page">Compteur de caractère</a>
+        </li>
+        <li>
+          <a href="#" class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0">Guide complet des limites</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
 
   <div class="h-screen max-w-3xl w-full mx-auto flex-grow flex flex-col justify-center">
     <div class="bg-white shadow-xl rounded-2xl p-8">
